--- a/predict/templates/predict/resultat.html
+++ b/predict/templates/predict/resultat.html
@@ -59,7 +59,7 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav mx-auto py-0">
                         <a href="{% url 'home' %}"  class="nav-item nav-link">Accueil</a>
-                        <a href="{% url 'about' %}"  class="nav-item nav-link">Qu’est-ce que Addictest ?</a>
+                        <a href="{% url 'about' %}"  class="nav-item nav-link">Qu’est-ce que AddicTest ?</a>
                         <a href="{% url 'simulation' %}" href="" class="nav-item nav-link active">Prédiction du risque d'addiction</a>
                     </div>
                     <a href="{% url 'admin:index'%}" class="btn rounded-pill py-2 px-4 ms-3 d-none d-lg-block">Espace Admin</a>
@@ -197,12 +197,12 @@
                     <div class="col-md-6 col-lg-4">
                         <p class="section-title text-white h5 mb-4">Quick Link<span></span></p>
                         <a href="{% url 'home' %}" class="btn btn-link">Accueil</a>
-                        <a href="{% url 'about' %}" class="btn btn-link">About Addictest</a>
-                        <a href="{% url 'simulation' %}" class="btn btn-link">Simulation</a>
+                        <a href="{% url 'about' %}" class="btn btn-link">Qu’est-ce que Addictest ?</a>
+                        <a href="{% url 'simulation' %}" class="btn btn-link">Simulation du risque d'addiction</a>
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <p class="section-title text-white h5 mb-4">Newsletter<span></span></p>
-                        <p>Recevez les dernières nouveautés de notre application!</p>
+                        <p>Recevez les dernières nouveautés d'AddicTest!</p>
                         <div class="position-relative w-100 mt-3">
                             <input class="form-control border-0 rounded-pill w-100 ps-4 pe-5" type="text" placeholder="Votre Email" style="height: 48px;">
                             <button type="button" class="btn shadow-none position-absolute top-0 end-0 mt-1 me-2"><i class="fa fa-paper-plane text-primary fs-4"></i></button>
