--- a/predict/templates/predict/index.html
+++ b/predict/templates/predict/index.html
@@ -58,7 +58,7 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav mx-auto py-0">
                         <a href="{% url 'home' %}"  class="nav-item nav-link active">Accueil</a>
-                        <a href="{% url 'about' %}"  class="nav-item nav-link">Qu’est-ce que Addictest ?</a>
+                        <a href="{% url 'about' %}"  class="nav-item nav-link">Qu’est-ce que AddicTest ?</a>
                         <a href="{% url 'simulation' %}" href="" class="nav-item nav-link">Prédiction du risque d'addiction</a>
                     </div>
                     <a href="{% url 'admin:index'%}" class="btn rounded-pill py-2 px-4 ms-3 d-none d-lg-block">Espace Admin</a>
@@ -69,8 +69,8 @@
                 <div class="container px-lg-5">
                     <div class="row g-5 align-items-end">
                         <div class="col-lg-6 text-center text-lg-start">
-                            <h1 class="text-white mb-4 animated slideInDown">Évaluez votre risque de développer une addiction</h1>
-                            <p class="text-white pb-3 animated slideInDown">Aujourd’hui, les avancées majeures des recherches scientifiques sur les addictions ont permis aux chercheurs d’identifier de nombreux facteurs liés à l’apparition de cette maladie, dont certains sont modifiables : la consommation de tabac et l’alimentation ...</p>
+                            <h1 class="text-white mb-4 animated slideInDown">Simulez votre risque d'addiction</h1>
+                            <p class="text-white pb-3 animated slideInDown">Aujourd’hui, les avancées majeures des recherches scientifiques sur les addictions ont permis aux chercheurs d’identifier de nombreux facteurs liés à l’addiction.</p>
                             <a href="{% url 'simulation' %}" class="btn btn-secondary py-sm-3 px-sm-5 rounded-pill me-3 animated slideInLeft">Simuler mon risque</a>
                         </div>
                         <div class="col-lg-6 text-center text-lg-start">
@@ -85,8 +85,12 @@
 
 
         <!-- Feature Start -->
-        <div class="container-xxl py-5">
-            <div class="container py-5 px-lg-5">
+        <div class="container-xxl">
+            <div class="container px-lg-5">
+                <div class="wow fadeInUp" data-wow-delay="0.1s">
+                    <p class="section-title text-secondary justify-content-center"><span></span>Notre Application<span></span></p>
+                    <h1 class="text-center mb-5">AddicTest</h1>
+                </div>
                 <div class="row g-4">
                     <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="feature-item bg-light rounded text-center p-4">
@@ -118,9 +122,9 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-7 text-center">
                         <p class="section-title text-white justify-content-center"><span></span>Newsletter<span></span></p>
-                        <h1 class="text-center text-white mb-4">Recevez les dernières nouveautés de notre application!</h1>
+                        <h1 class="text-center text-white mb-4">Recevez les dernières nouveautés d'AddicTest!</h1>
                         <div class="position-relative w-100 mt-3">
-                            <input class="form-control border-0 rounded-pill w-100 ps-4 pe-5" type="text" placeholder="Entez votre Email" style="height: 48px;">
+                            <input class="form-control border-0 rounded-pill w-100 ps-4 pe-5" type="text" placeholder="Votre Email" style="height: 48px;">
                             <button type="button" class="btn shadow-none position-absolute top-0 end-0 mt-1 me-2"><i class="fa fa-paper-plane text-primary fs-4"></i></button>
                         </div>
                     </div>
@@ -171,80 +175,6 @@
         <!-- Testimonial End -->
 
 
-        <!-- Team Start -->
-        <div class="container-xxl py-5">
-            <div class="container py-5 px-lg-5">
-                <div class="wow fadeInUp" data-wow-delay="0.1s">
-                    <p class="section-title text-secondary justify-content-center"><span></span>Our Team<span></span></p>
-                    <h1 class="text-center mb-5">Notre Équipe</h1>
-                </div>
-                <div class="row g-4">
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <div class="team-item bg-light rounded">
-                            <div class="text-center border-bottom p-4">
-                                <img class="img-fluid rounded-circle mb-4" src="{% static 'predict/img/salah.jpg'%}" alt="">
-                                <h5>Salah Eddine FATIH</h5>
-                                <span>Student</span>
-                            </div>
-                            <div class="d-flex justify-content-center p-4">
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-instagram"></i></a>
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                        <div class="team-item bg-light rounded">
-                            <div class="text-center border-bottom p-4">
-                                <img class="img-fluid rounded-circle mb-4" src="{% static 'predict/img/rachid.jpg' %}" alt="">
-                                <h5>LAKHL Rachid</h5>
-                                <span>Student</span>
-                            </div>
-                            <div class="d-flex justify-content-center p-4">
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-instagram"></i></a>
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                        <div class="team-item bg-light rounded">
-                            <div class="text-center border-bottom p-4">
-                                <img class="img-fluid rounded-circle mb-4" src="{% static 'predict/img/ayoub.jpg' %}" alt="">
-                                <h5>SOUAD Ayoub</h5>
-                                <span>Student</span>
-                            </div>
-                            <div class="d-flex justify-content-center p-4">
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-instagram"></i></a>
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                        <div class="team-item bg-light rounded">
-                            <div class="text-center border-bottom p-4">
-                                <img class="img-fluid rounded-circle mb-4" src="{% static 'predict/img/amin.jpg' %}" alt="">
-                                <h5>IDELHAJ Amine</h5>
-                                <span>Student</span>
-                            </div>
-                            <div class="d-flex justify-content-center p-4">
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-instagram"></i></a>
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Team End -->
-
-
         <!-- Footer Start -->
         <div class="container-fluid bg-primary text-light footer wow fadeIn" data-wow-delay="0.1s">
             <div class="container py-5 px-lg-5">
@@ -257,12 +187,12 @@
                     <div class="col-md-6 col-lg-4">
                         <p class="section-title text-white h5 mb-4">Quick Link<span></span></p>
                         <a href="{% url 'home' %}" class="btn btn-link">Accueil</a>
-                        <a href="{% url 'about' %}" class="btn btn-link">About Addictest</a>
-                        <a href="{% url 'simulation' %}" class="btn btn-link">Simulation</a>
+                        <a href="{% url 'about' %}" class="btn btn-link">Qu’est-ce que Addictest ?</a>
+                        <a href="{% url 'simulation' %}" class="btn btn-link">Simulation du risque d'addiction</a>
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <p class="section-title text-white h5 mb-4">Newsletter<span></span></p>
-                        <p>Recevez les dernières nouveautés de notre application!</p>
+                        <p>Recevez les dernières nouveautés d'AddicTest!</p>
                         <div class="position-relative w-100 mt-3">
                             <input class="form-control border-0 rounded-pill w-100 ps-4 pe-5" type="text" placeholder="Votre Email" style="height: 48px;">
                             <button type="button" class="btn shadow-none position-absolute top-0 end-0 mt-1 me-2"><i class="fa fa-paper-plane text-primary fs-4"></i></button>
