--- a/predict/templates/predict/about.html
+++ b/predict/templates/predict/about.html
@@ -62,7 +62,7 @@
                         <a href="{% url 'about' %}"  class="nav-item nav-link active">Qu’est-ce que AddicTest ?</a>
                         <a href="{% url 'simulation' %}" href="" class="nav-item nav-link">Prédiction du risque d'addiction</a>
                     </div>
-                    <a href="{% url 'admin:index'%}" class="btn rounded-pill py-2 px-4 ms-3 d-none d-lg-block">Espace Admin</a>
+                    <a href="{% url 'home'%}" class="btn rounded-pill py-2 px-4 ms-3 d-none d-lg-block">Espace Personnel</a>
                 </div>
             </nav>
 
